<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/descarga" />

        <TextView
            android:id="@+id/Respuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/numero_uno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_hint_numero"
            android:inputType="number" />

        <EditText
            android:id="@+id/numero_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_hint_numero"
            android:inputType="number" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sumar"
                    android:text="@string/btn_text_suma" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="restar"
                    android:text="@string/btn_text_resta" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="multiplicar"
                    android:text="@string/btn_text_multiplicacion" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="division"
                    android:text="@string/btn_text_division" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="380dp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_politicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:onClick="irAPoliticasPrivacidad"
            android:text="@string/btn_text_politicas" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>